--- a/HTML/test.html
+++ b/HTML/test.html
@@ -8,8 +8,7 @@
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="CSS/index.css">
-  <link rel="icon" href="Assets/icons/image.ico">
+  <link rel="stylesheet" href="../CSS/style.css">
 
 </head>
 <body>
@@ -20,7 +19,7 @@
         
       <!-- Logo y nombre de la empresa -->
       <a class="navbar-brand animated-title" href="#">
-        <img src="Assets/images/image.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../Assets/images/image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         ZeroSoftware
       </a>
 
@@ -31,13 +30,13 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quiénes Somos?</a>
+            <a class="nav-link" href="#">Enlace 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Integrantes</a>
+            <a class="nav-link" href="#">Enlace 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">Enlace 3</a>
           </li>
 
           <!-- Enlaces desplegables -->
@@ -77,7 +76,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="Assets/images/section1.gif" alt="Image Not Found" class="img-fluid">
+        <img src="../Assets/images/section1.gif" alt="Image Not Found" class="img-fluid">
       </div>
     </section>
 </div>
@@ -85,18 +84,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+  <script src="../JS/navbar.js"></script>
 </body>
-<footer class="footer fixed-bottom">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <p class="footer-text">© 2023 ZeroSoftware. Todos los derechos reservados.</p>
-      </div>
-      <div class="col-md-6 text-right">
-        <a href="#" class="footer-link slide-in-from-right">Política de privacidad</a>
-      </div>
-    </div>
-  </div>
-</footer>
 </html>
