--- a/HTML/indice.html
+++ b/HTML/indice.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ZeroSoftware</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<html lang="en">
+<head>
 
-    </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-</html>
+    <title>ZeroSoftware</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="icon" href="../Assets/icons/image.ico">
+
+</head>
 <body>
-
-
     
     <div class="container my-1 my-sm-2 my-md-4 my-lg-5">
         <h1 class="h1">ZeroSoftware</h1>
         <p class="lead">DOCUMENTACION</p>
 
         <ul class="list-group">
-            <a class="list-group-item list-group-item-action" href="lista-compras.html">
+            <a class="list-group-item list-group-item-action" href="planos.html">
                 Plano 3D
             </a>
             <a class="list-group-item list-group-item-action" href="editor-texto.html">
@@ -56,5 +55,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-
 </body>
+</html>
