--- a/HTML/plantilla.html
+++ b/HTML/plantilla.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   
   <!-- Links Locales -->
-  <link rel="stylesheet" href="CSS/index.css">
-  <link rel="icon" href="Assets/icons/image.ico">
+  <link rel="stylesheet" href="../CSS/index.css">
+  <link rel="icon" href="../Assets/icons/image.ico">
 
 </head>
 <body>
@@ -23,24 +23,24 @@
         
       <!-- Logo y nombre de la empresa -->
       <a class="navbar-brand animated-title" href="#">
-        <img src="Assets/images/image.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../Assets/images/image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         ZeroSoftware
       </a>
 
       <!-- Subtítulo -->
-      <p class="navbar-subtitle animated-subtitle">Documentation</p>
+      <p class="navbar-subtitle animated-subtitle">Nombre de la View</p>
 
       <!-- Enlaces en la derecha -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quiénes Somos?</a>
+            <a class="nav-link" href="#">Enlace 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Integrantes</a>
+            <a class="nav-link" href="#">Enlace 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">Enlace 3</a>
           </li>
 
           <!-- Enlaces desplegables -->
@@ -73,17 +73,17 @@
     <section class="row align-items-center">
       <div class="col-md-6">
         <div class="text-left">
-          <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
-          <h3><span style="color: #9575CD;">¿</span>Quiénes Somos<span style="color: #9575CD;">?</span></h3>
-          <p>En ZeroSoftware, somos una empresa de desarrollo de software a medida que va más allá de la creación de aplicaciones; nos sumergimos en cada idea.</p>
-          <p>Nos comprometemos al 100% con nuestros clientes en todas las etapas del proyecto para lograr resultados únicos e innovadores.</p>
-          <p>Creemos en la importancia de cada idea y nos esforzamos por transformarlas en proyectos digitales tangibles.</p>
-          <p>Tu visión es nuestra misión en ZeroSoftware, donde cada proyecto refleja la esencia y singularidad de tus ideas.</p>
-          <p style="font-weight: bold; color: #9575CD;">ZeroSoftware, tu Socio en Desarrollo Personalizado</p>
+          <h2>Titulo de la Seccion</h2>
+          <h3>Subtitulo de la seccion</h3>
+          <p>Parrafo 1</p>
+          <p>Parrafo 2</p>
+          <p>Parrafo 3</p>
+          <p>Parrafo 4</p>
+          <p>Pie de la seccion</p>
         </div>
       </div>
       <div class="col-md-6">
-        <img src="Assets/images/section1.gif" alt="Image Not Found" class="img-fluid">
+        <img src="" alt="Imagen de la Seccion" class="img-fluid">
       </div>
     </section>
 </div>
