--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         
       <!-- Logo y nombre de la empresa -->
-      <a class="navbar-brand animated-title" href="#">
+      <a class="navbar-brand animated-title" href="index.html">
         <img src="Assets/images/image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         ZeroSoftware
       </a>
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quiénes Somos?</a>
+            <a class="nav-link" href="#">Ubicacion</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Integrantes</a>
@@ -49,17 +49,17 @@
               Navigation List
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Enlace 1</a>
-              <a class="dropdown-item" href="#">Enlace 2</a>
-              <a class="dropdown-item" href="#">Enlace 3</a>
-              <a class="dropdown-item" href="#">Enlace 4</a>
-              <a class="dropdown-item" href="#">Enlace 4</a>
-              <a class="dropdown-item" href="#">Enlace 6</a>
-              <a class="dropdown-item" href="#">Enlace 7</a>
-              <a class="dropdown-item" href="#">Enlace 8</a>
-              <a class="dropdown-item" href="#">Enlace 9</a>
-              <a class="dropdown-item" href="#">Enlace 10</a>
-              <a class="dropdown-item" href="#">Enlace 11</a>
+              <a class="dropdown-item" href="HTML/planos.html">Planos 3D</a>
+              <a class="dropdown-item" href="#">Actividades</a>
+              <a class="dropdown-item" href="#">Sectores</a>
+              <a class="dropdown-item" href="#">Ciclo de Vida</a>
+              <a class="dropdown-item" href="#">Diccionario de Datos</a>
+              <a class="dropdown-item" href="#">DFDs</a>
+              <a class="dropdown-item" href="#">Distribucion del Trabajo</a>
+              <a class="dropdown-item" href="#">Cursogramas</a>
+              <a class="dropdown-item" href="#">Seguridad</a>
+              <a class="dropdown-item" href="#">Pantallas / Formularios</a>
+              <a class="dropdown-item" href="#">Costos</a>
             </div>
           </li>
         </ul>
