--- a/HTML/planos.html
+++ b/HTML/planos.html
@@ -45,13 +45,13 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicacion</a>
+            <a class="nav-link" href="https://www.google.com/maps?q=latitude,longitude" target="_blank">Ubicacion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Integrantes</a>
+            <a class="nav-link" href="integrantes.html">Integrantes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="mailto:damzerotec@gmail.com" target="_blank">Contacto</a>
           </li>
 
           <!-- Enlaces desplegables -->
@@ -63,7 +63,7 @@
               <a class="dropdown-item" href="#">Actividades</a>
               <a class="dropdown-item" href="#">Sectores</a>
               <a class="dropdown-item" href="#">Ciclo de Vida</a>
-              <a class="dropdown-item" href="#">Diccionario de Datos</a>
+              <a class="dropdown-item" href="tablaDatos.html">Diccionario de Datos</a>
               <a class="dropdown-item" href="#">DFDs</a>
               <a class="dropdown-item" href="#">Distribucion del Trabajo</a>
               <a class="dropdown-item" href="#">Cursogramas</a>
@@ -77,7 +77,7 @@
     </div>
   </nav>
 
-  <!-- Contenido de la página -->
+  <!-- Contenido de la página 1 -->
   <div class="container mt-5">
 
     <!-- Sección 1 -->
@@ -98,6 +98,10 @@
           <img src="../Assets/images/section2.gif" alt="Image Not Found" class="img-fluid">
       </div>
     </section>
+  </div>
+
+  <!-- Contenido de la página 2 -->
+  <div class="container mt-5">
 
     <!-- Carrusel de Imágenes -->
     <div id="imageCarousel1" class="carousel slide" data-ride="carousel">
