--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicacion</a>
+            <a class="nav-link" href="https://www.google.com/maps?q=latitude,longitude" target="_blank">Ubicacion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Integrantes</a>
+            <a class="nav-link" href="HTML/integrantes.html">Integrantes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="mailto:damzerotec@gmail.com" target="_blank">Contacto</a>
           </li>
 
           <!-- Enlaces desplegables -->
@@ -53,7 +53,7 @@
               <a class="dropdown-item" href="#">Actividades</a>
               <a class="dropdown-item" href="#">Sectores</a>
               <a class="dropdown-item" href="#">Ciclo de Vida</a>
-              <a class="dropdown-item" href="#">Diccionario de Datos</a>
+              <a class="dropdown-item" href="HTML/tablaDatos.html">Diccionario de Datos</a>
               <a class="dropdown-item" href="#">DFDs</a>
               <a class="dropdown-item" href="#">Distribucion del Trabajo</a>
               <a class="dropdown-item" href="#">Cursogramas</a>
