--- a/HTML/planos.html
+++ b/HTML/planos.html
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="https://www.google.com/maps?q=latitude,longitude" target="_blank">Ubicacion</a>
+            <a class="nav-link" href="https://www.google.com/maps?q=-34.72971768918275, -58.26192966827688" target="_blank">Ubicacion</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="integrantes.html">Integrantes</a>
@@ -60,16 +60,16 @@
               Navigation List
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Actividades</a>
-              <a class="dropdown-item" href="#">Sectores</a>
-              <a class="dropdown-item" href="#">Ciclo de Vida</a>
+              <a class="dropdown-item" href="actividades.html">Actividades</a>
+              <a class="dropdown-item" href="sectores.html">Sectores</a>
+              <a class="dropdown-item" href="cicloVida.html">Ciclo de Vida</a>
               <a class="dropdown-item" href="tablaDatos.html">Diccionario de Datos</a>
-              <a class="dropdown-item" href="#">DFDs</a>
-              <a class="dropdown-item" href="#">Distribucion del Trabajo</a>
-              <a class="dropdown-item" href="#">Cursogramas</a>
-              <a class="dropdown-item" href="#">Seguridad</a>
-              <a class="dropdown-item" href="#">Pantallas / Formularios</a>
-              <a class="dropdown-item" href="#">Costos</a>
+              <a class="dropdown-item" href="dfds.html">DFDs</a>
+              <a class="dropdown-item" href="distTrabajo.html">Distribucion del Trabajo</a>
+              <a class="dropdown-item" href="cursogramas.html">Cursogramas</a>
+              <a class="dropdown-item" href="seguridad.html">Seguridad</a>
+              <a class="dropdown-item" href="formularios.html">Pantallas / Formularios</a>
+              <a class="dropdown-item" href="costos.html">Costos</a>
             </div>
           </li>
         </ul>
