--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="https://www.google.com/maps?q=latitude,longitude" target="_blank">Ubicacion</a>
+            <a class="nav-link" href="https://www.google.com/maps?q=-34.72971768918275, -58.26192966827688" target="_blank">Ubicacion</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="HTML/integrantes.html">Integrantes</a>
@@ -50,16 +50,16 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="HTML/planos.html">Planos 3D</a>
-              <a class="dropdown-item" href="#">Actividades</a>
-              <a class="dropdown-item" href="#">Sectores</a>
-              <a class="dropdown-item" href="#">Ciclo de Vida</a>
+              <a class="dropdown-item" href="HTML/actividades.html">Actividades</a>
+              <a class="dropdown-item" href="HTML/sectores.html">Sectores</a>
+              <a class="dropdown-item" href="HTML/cicloVida.html">Ciclo de Vida</a>
               <a class="dropdown-item" href="HTML/tablaDatos.html">Diccionario de Datos</a>
-              <a class="dropdown-item" href="#">DFDs</a>
-              <a class="dropdown-item" href="#">Distribucion del Trabajo</a>
-              <a class="dropdown-item" href="#">Cursogramas</a>
-              <a class="dropdown-item" href="#">Seguridad</a>
-              <a class="dropdown-item" href="#">Pantallas / Formularios</a>
-              <a class="dropdown-item" href="#">Costos</a>
+              <a class="dropdown-item" href="HTML/dfds.html">DFDs</a>
+              <a class="dropdown-item" href="HTML/distTrabajo.html">Distribucion del Trabajo</a>
+              <a class="dropdown-item" href="HTML/cursogramas.html">Cursogramas</a>
+              <a class="dropdown-item" href="HTML/seguridad.html">Seguridad</a>
+              <a class="dropdown-item" href="HTML/formularios.html">Pantallas / Formularios</a>
+              <a class="dropdown-item" href="HTML/costos.html">Costos</a>
             </div>
           </li>
         </ul>
