--- a/HTML/actividades.html
+++ b/HTML/actividades.html
@@ -66,10 +66,23 @@
     </div>
   </nav>
 
-    <!-- Contenido de la página 1 -->
-    <div class="container mt-5">
-
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">¿</span>Que actividades realizamos<span style="color: #9575CD;">?</span></h3>
+        <p>En ZeroSoftware, nos especializamos en la concepción y desarrollo de aplicaciones móviles y entornos web de vanguardia. Nuestro compromiso abarca un amplio espectro de servicios, que incluyen pruebas exhaustivas de seguridad, mantenimiento proactivo y la implementación de actualizaciones para sistemas existentes. Asimismo, nos destacamos en la revitalización y remodelación de sitios web, asegurando que reflejen las últimas tendencias y tecnologías. Nuestro enfoque integral se extiende a la realización de pruebas de seguridad detalladas en sistemas, aplicaciones y plataformas web, garantizando la integridad y la robustez de los productos que desarrollamos y mantenemos.</p>
+        <p style="font-weight: bold; color: #9575CD;">ZeroSoftware | Desarrollo de Aplicaciones Móviles y Entornos Web | Pruebas de Seguridad | Mantenimiento y Actualización de Sistemas | Remodelación de Sitios Web |</p>
+      </div>
     </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/App Mobile.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
 
   <!-- Links a los directorios de Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
