--- a/HTML/sectores.html
+++ b/HTML/sectores.html
@@ -66,10 +66,95 @@
     </div>
   </nav>
 
-    <!-- Contenido de la página 1 -->
-    <div class="container mt-5">
-
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">A</span>tencion al <span style="color: #9575CD;">C</span>lientes</h3>
+        <p>Nuestro equipo de Atención al Cliente en ZeroSoftware se dedica a proporcionar un servicio excepcional y personalizado. Estamos comprometidos a entender las necesidades y requerimientos de nuestros clientes, brindando asistencia rápida y eficiente. Ya sea resolviendo consultas, proporcionando información detallada sobre nuestros servicios, o guiando a nuestros clientes a través de procesos, nuestro equipo de atención al cliente se esfuerza por garantizar una experiencia satisfactoria en cada interacción.</p>
+        <p style="font-weight: bold; color: #9575CD;">Atención al Cliente | Servicio personalizado y eficiente |</p>
+      </div>
     </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/section3.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
+
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">S</span>ector de <span style="color: #9575CD;">D</span>esarrollo</h3>
+        <p>El sector de Desarrollo en ZeroSoftware está conformado por profesionales altamente capacitados y creativos. Nos especializamos en la creación de aplicaciones móviles y entornos web innovadores y de alta calidad. Desde la concepción de la idea hasta la implementación y puesta en marcha, nuestro equipo de desarrollo trabaja incansablemente para materializar las visiones de nuestros clientes, asegurando soluciones tecnológicas efectivas y a la vanguardia.</p>
+        <p style="font-weight: bold; color: #9575CD;">| Desarrollo de Aplicaciones Móviles y Entornos Web |</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/section4.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
+
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">A</span>dministracion de <span style="color: #9575CD;">P</span>royectos</h3>
+        <p>Nuestro equipo de Administración de Proyectos es el motor que impulsa la ejecución eficiente de cada iniciativa. Desde la planificación y asignación de recursos hasta el seguimiento y cumplimiento de plazos, nos aseguramos de que cada proyecto se desarrolle de manera fluida y dentro de los parámetros establecidos. La coordinación efectiva y la comunicación constante son fundamentales para garantizar el éxito y la satisfacción del cliente en todas las fases del desarrollo.</p>
+        <p style="font-weight: bold; color: #9575CD;">Administración de Proyectos | Eficiencia en cada iniciativa |</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/desinganddev.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
+
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">A</span>dministracion de la <span style="color: #9575CD;">E</span>mpresa</h3>
+        <p>La administración general de la empresa en ZeroSoftware se enfoca en la toma de decisiones estratégicas y el manejo eficiente de los recursos. Desde la gestión financiera hasta la planificación a largo plazo, nuestro equipo administrativo trabaja en colaboración para garantizar la sostenibilidad y el crecimiento continuo de la empresa. Además, nos esforzamos por mantener un entorno de trabajo positivo y productivo para nuestro talentoso equipo.</p>
+        <p style="font-weight: bold; color: #9575CD;">Administración General | Estrategia y sostenibilidad | </p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/section 5.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
+
+<!-- Contenido de la página -->
+<div class="container mt-5">
+  <!-- Sección 1 -->
+  <section class="row align-items-center">
+    <div class="col-md-6">
+      <div class="text-left">
+        <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+        <h3><span style="color: #9575CD;">S</span>ector de <span style="color: #9575CD;">S</span>eguridad</h3>
+        <p>El sector de Seguridad en ZeroSoftware despliega una doble función esencial. Por un lado, se encarga de realizar pruebas exhaustivas de seguridad en las aplicaciones desarrolladas, asegurando la integridad y robustez de cada solución tecnológica entregada. Por otro lado, este equipo trabaja diligentemente para proteger los datos sensibles de la empresa, implementando medidas proactivas para garantizar la confidencialidad, integridad y disponibilidad de la información crítica. La seguridad, tanto en términos de productos como de datos, es una prioridad inquebrantable en todos los aspectos de nuestras operaciones.</p>
+        <p style="font-weight: bold; color: #9575CD;"> Seguridad | Protegiendo aplicaciones y datos |</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../Assets/images/seguridad.gif" alt="Image Not Found" class="img-fluid">
+    </div>
+  </section>
+</div>
 
   <!-- Links a los directorios de Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
