--- a/HTML/seguridad.html
+++ b/HTML/seguridad.html
@@ -66,10 +66,25 @@
     </div>
   </nav>
 
-    <!-- Contenido de la página 1 -->
-    <div class="container mt-5">
+  <!-- Contenido de la página 1 -->
+  <div class="container mt-5">
 
-    </div>
+    <!-- Sección 1 -->
+    <section class="row align-items-center">
+      <div class="col-md-6">
+        <div class="text-left">
+          <h2><span style="color: #6F42C1;">Zero</span>Software</h2>
+          <h3><span style="color: #9575CD;">S</span>eguridad</h3>
+          <p>En la esfera crucial de la seguridad, ZeroSoftware se distingue por su compromiso inquebrantable con la protección integral de las soluciones que desarrollamos y los datos que gestionamos. Nuestro equipo de seguridad desempeña un papel fundamental en este contexto, llevando a cabo actividades que abarcan desde exhaustivas pruebas de seguridad en las aplicaciones desarrolladas hasta la implementación de medidas proactivas para salvaguardar la integridad y confidencialidad de los datos de la empresa.</p>
+          <p>Además de ser un imperativo técnico, la seguridad es un componente esencial de la confianza del cliente. Nos enorgullece brindar un entorno tecnológico seguro y confiable, respaldado por un equipo altamente capacitado y dedicado a mantener la integridad y privacidad de la información.</p>
+          <p style="font-weight: bold; color: #9575CD;">Sector de Seguridad | Protegiendo aplicaciones y datos sensibles |</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+          <img src="../Assets/images/seguridad.gif" alt="Image Not Found" class="img-fluid">
+      </div>
+    </section>
+  </div>
 
   <!-- Links a los directorios de Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
