--- a/HTML/costos.html
+++ b/HTML/costos.html
@@ -66,97 +66,136 @@
     </div>
   </nav>
 
-  <!-- Contenido de la página -->
-  <div class="container mt-5">
-    <!-- Sección 1 -->
-    <section class="row align-items-center">
-      <div class="col-md-6">
-        <div class="text-left">
-          <h2><span style="color: #6F42C1;">E</span>valueacion de <span style="color: #6F42C1;">C</span>ostos</h2>
-          <h3><span style="color: #9575CD;">¿</span>Como hacemos nuestros presupuestos<span style="color: #9575CD;">?</span></h3>
-          <p> Nos complace presentarle nuestro servicio de desarrollo de software, dedicado a materializar sus ideas y necesidades digitales. En este presupuesto, nos embarcamos en un viaje colaborativo para crear una aplicación o página web personalizada que no solo cumpla con sus expectativas, sino que las supere.</p>
-          <p>A continuación, procederemos a evaluar sus necesidades y demandas con el objetivo de proporcionar un presupuesto detallado para su proyecto. Este análisis meticuloso considerará una serie de factores fundamentales, entre los cuales se incluyen, pero no se limitan a, los siguientes:</p>
-          <p style="font-weight: bold; color: #9575CD;">Requerimientos, Alcance del proyecto, Diseño de UI/UX, Tecnologias utilizadas, Desarrollo, Pruebas, Gestion de proyecto, Mantenimiento, Costos operativos, Contiingencias y Documentacion.</p>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <img src="../Assets/images/management.gif" alt="Image Not Found" class="img-fluid">
-      </div>
-    </section>
-
-  </div>
-
-<!-- Contenido de la página 2 -->
+<!-- Contenido de la página 1 -->
 <div class="container mt-5">
-  <!-- Sección 1 -->
-  <section class="row align-items-center">
-    <div class="col-md-6">
-      <div class="text-left">
-        <h2><span style="color: #6F42C1;">E</span>specificaciones</h2>
 
-        <p>Requerimientos: Se llevará a cabo una exhaustiva evaluación de los requisitos funcionales y no funcionales para garantizar una comprensión completa de las expectativas del cliente.</p>
+  <!-- Tabla de Proyectos en Proceso -->
+  <h2 class="mt-4 mb-4">Tabla de Costos</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Gastos</th>
+        <th scope="col">Costos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Cimientos y Estructura</td>
+        <td>$150.000</td>
+      </tr>
+      <tr>
+        <td>Paredes y Acabados</td>
+        <td>
+          Paredes Exteriores: $40.000
+          <br>
+          Paredes internas de durlock: $30.000
+          <br>
+          Piso de Cerámica: $20.000
+        </td>
+      </tr>
+      <tr>
+        <td>Escaleras y Ascensor</td>
+        <td>$60.000</td>
+      </tr>
+      <tr>
+        <td>Baños</td>
+        <td>
+          Planta baja: $25.000
+          <br>
+          Primer, segundo y tercer piso: $11.000 (C/u)
+        </td>
+      </tr>
+      <tr>
+        <td>Escaleras de Emergencia</td>
+        <td>$25.000</td>
+      </tr>
+      <tr>
+        <td>Mobiliario Planta baja</td>
+        <td>
+          Sala de espera: $8.000
+          <br>
+          Oficinas de atencion al cliente: $15.000
+        </td>
+      </tr>
+      <tr>
+        <td>Oficinas de desarrollo (Primer y segundo piso)</td>
+        <td>
+          Escritorios y sillas (24 cubiculos): $30.000
+          <br>
+          Equipo por cubiculo: $1.500 x 24 = $38.000
+          <br>
+          Mobiliario ed zona de descanso: $15.000
+        </td>
+      </tr>
+      <tr>
+        <td>Tercer Piso</td>
+        <td>Sala de reuniones: $20.000</td>
+      </tr>
+      <tr>
+        <td>Mobiliario adicional</td>
+        <td>$15.000</td>
+      </tr>
+      <tr>
+        <td>Instalacion Electrica</td>
+        <td>$25.000</td>
+      </tr>
+      <tr>
+        <td>Fontaneria</td>
+        <td>$15.000</td>
+      </tr>
+      <tr>
+        <td>Sistema de seguridad</td>
+        <td>
+          Camaras y alarmas: $10.000
+          <br>
+          Sensores de humo: $1.500
+          <br>
+          Aspersores de agua: $3.000
+          <br>
+          Instalacion: $5.000
+          <br>
+          Matafuegos: $150 x 12 = $1.800
+        </td>
+      </tr>
+      <tr>
+        <td>Equipos de red</td>
+        <td>
+          Routers: $1.400 x 2 = $2.800 (por piso)
+          <br>
+          Switches y Equipos de Red: $5.000
+          <br>
+          Plan de internet: $3.600 (Anuales)
+        </td>
+      </tr>
+      <tr>
+        <td>Aires Acondicionados</td>
+        <td>$2.000 x 9 = $14.000</td>
+      </tr>
+      <tr>
+        <td>Servidores</td>
+        <td>
+          $8.000 (Anual)
+          <br>
+          Licencia windows server $2.000
+        </td>
+      </tr>
+      <tr>
+        <td>Licencioas de SO</td>
+        <td>$200 x 36 = $7.200</td>
+      </tr>
+      <tr>
+        <td>Presupuesto Total Estimado</td>
+        <td>
+          580.000 U$D
+          <br>
+          203.000.000 AR$
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-        <p>Alcance del proyecto: Definiremos con precisión los límites y la extensión del proyecto, detallando las características y funcionalidades contempladas en la solución digital.</p>
-
-        <p>Diseño de UI/UX Se dedicará especial atención al diseño visual y la experiencia del usuario, asegurando un enfoque estético y funcional que responda a estándares y preferencias actuales.</p>
-
-        <p>Tecnologias utilizadas: Se determinarán las tecnologías más apropiadas para la implementación, considerando tanto la eficiencia como la sostenibilidad a largo plazo del sistema.</p>
-
-      </div>
-    </div>
-    <div class="col-md-6">
-      <img src="../Assets/images/App Mobile.gif" alt="Image Not Found" class="img-fluid">
-    </div>
-  </section>
 </div>
 
-<!-- Contenido de la página 2 -->
-<div class="container mt-5">
-  <!-- Sección 2 -->
-  <section class="row align-items-center">
-    <div class="col-md-6">
-      <div class="text-left">
-        <h2><span style="color: #6F42C1;">E</span>specificaciones</h2>
-
-        <p>Desarrollo: Estimaremos con precisión el tiempo y los recursos necesarios para llevar a cabo cada fase del desarrollo, garantizando la eficacia y la calidad del producto final.</p>
-
-        <p>Pruebas: Se implementará un riguroso plan de pruebas que abarque desde pruebas unitarias hasta pruebas de aceptación del usuario, asegurando la fiabilidad y la integridad del software.</p>
-
-        <p>Gestion de Proyecto: Se asignarán recursos para la gestión integral del proyecto, abarcando la planificación, coordinación y comunicación efectiva con el cliente.</p>
-
-        <p>Mantenimiento: Se contemplarán aspectos relacionados con el mantenimiento a largo plazo, incluyendo actualizaciones, correcciones de errores y mejoras continuas.</p>
-
-      </div>
-    </div>
-    <div class="col-md-6">
-      <img src="../Assets/images/Desarrollo.gif" alt="Image Not Found" class="img-fluid">
-    </div>
-  </section>
-</div>
-
-<!-- Contenido de la página 2 -->
-<div class="container mt-5">
-  <!-- Sección 2 -->
-  <section class="row align-items-center">
-    <div class="col-md-6">
-      <div class="text-left">
-        <h2><span style="color: #6F42C1;">E</span>specificaciones</h2>
-
-        <p>Costos Operativos: Evaluaremos y detallaremos los costos operativos asociados, como alojamiento web, dominios y servicios en la nube, garantizando una visión integral de los gastos.</p>
-
-        <p>Contingencias: Se reservará un margen para contingencias, reconociendo la posibilidad de imprevistos y cambios no anticipados durante el desarrollo del proyecto.</p>
-
-        <p>Documentacion: Se prestará especial atención a la documentación exhaustiva del proyecto, incluyendo la documentación del código y manuales de usuario, para facilitar su comprensión y mantenimiento a largo plazo.</p>
-
-        <p style="font-weight: bold; color: #9575CD;">Estos son algunos de los factores a tratar al momento de hacer un presupuesto en las reuniones previas al inicio del proyecto.</p>
-
-      </div>
-    </div>
-    <div class="col-md-6">
-      <img src="../Assets/images/search.gif" alt="Image Not Found" class="img-fluid">
-    </div>
-  </section>
-</div>
 
   <!-- Links a los directorios de Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
