--- a/HTML/cursogramas.html
+++ b/HTML/cursogramas.html
@@ -66,10 +66,30 @@
     </div>
   </nav>
 
-    <!-- Contenido de la página 1 -->
-    <div class="container mt-5">
+  <!-- Contenido de la página 2 -->
+  <div class="container mt-5">
 
+    <!-- Carrusel de Imágenes -->
+    <div id="imageCarousel1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../Assets/cursogramas/cursograma1" class="d-block w-100" alt="Primera Imagen">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/cursogramas/cursograma2" class="d-block w-100" alt="Segunda Imagen">
+            </div>
+        </div>
+        <!-- Controles del carrusel -->
+        <a class="carousel-control-prev" href="#imageCarousel1" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#imageCarousel1" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+        </a>
     </div>
+  </div>
 
   <!-- Links a los directorios de Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
