--- a/HTML/dfds.html
+++ b/HTML/dfds.html
@@ -126,6 +126,9 @@
             <div class="carousel-item">
               <img src="../Assets/dfd/nivel7.jpg" class="d-block w-100" alt="Segunda Imagen">
             </div>
+            <div class="carousel-item">
+              <img src="../Assets/dfd/nivel8.jpg" class="d-block w-100" alt="Segunda Imagen">
+            </div>
         </div>
         <!-- Controles del carrusel -->
         <a class="carousel-control-prev" href="#imageCarousel1" role="button" data-slide="prev">
