--- a/HTML/cursogramas.html
+++ b/HTML/cursogramas.html
@@ -73,10 +73,10 @@
     <div id="imageCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../Assets/cursogramas/cursograma1" class="d-block w-100" alt="Primera Imagen">
+                <img src="../Assets/cursogramas/cursograma1.jpg" class="d-block w-100" alt="Primera Imagen">
             </div>
             <div class="carousel-item">
-                <img src="../Assets/cursogramas/cursograma2" class="d-block w-100" alt="Segunda Imagen">
+                <img src="../Assets/cursogramas/cursograma2.jpg" class="d-block w-100" alt="Segunda Imagen">
             </div>
         </div>
         <!-- Controles del carrusel -->
